--- a/tinder-backend/package.json
+++ b/tinder-backend/package.json
@@ -27,6 +27,7 @@
     "@nestjs/mongoose": "^9.2.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "argon": "^2.0.21",
     "argon2": "^0.29.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
