--- a/tinder-backend/package.json
+++ b/tinder-backend/package.json
@@ -24,22 +24,26 @@
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^9.0.0",
-    "@nestjs/mongoose": "^9.2.0",
+    "@nestjs/mongoose": "^9.2.2",
     "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-express": "^9.4.2",
+    "@types/multer": "^1.4.7",
     "argon": "^2.0.21",
     "argon2": "^0.29.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "config": "^3.3.9",
     "dotenv": "^16.0.3",
+    "graphql-upload": "^16.0.2",
     "mongoose": "^6.6.3",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
