--- a/tinder-frontend/package.json
+++ b/tinder-frontend/package.json
@@ -19,6 +19,7 @@
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.43.9",
     "react-query": "^3.39.3",
     "react-router": "^6.11.2",
