--- a/tinder-backend/package.json
+++ b/tinder-backend/package.json
@@ -27,7 +27,9 @@
     "@nestjs/mongoose": "^9.2.2",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.4.2",
+    "@nestjs/serve-static": "^3.0.1",
     "@types/multer": "^1.4.7",
+    "app-root-path": "^3.1.0",
     "argon": "^2.0.21",
     "argon2": "^0.29.1",
     "class-transformer": "^0.5.1",
