--- a/tinder-backend/package.json
+++ b/tinder-backend/package.json
@@ -21,7 +21,7 @@
   },
   "dependencies": {
     "@nestjs/axios": "^3.0.0",
-    "@nestjs/common": "^9.0.0",
+    "@nestjs/common": "^9.4.3",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^9.0.0",
@@ -47,7 +47,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "websocket": "^1.0.34"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
