--- a/tinder-frontend/package.json
+++ b/tinder-frontend/package.json
@@ -25,6 +25,7 @@
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.3",
     "typescript": "^4.9.5",
     "use-history": "^1.4.1",
     "web-vitals": "^2.1.4",
