--- a/tinder-backend/package.json
+++ b/tinder-backend/package.json
@@ -21,14 +21,18 @@
   },
   "dependencies": {
     "@nestjs/axios": "^3.0.0",
-    "@nestjs/common": "^9.4.3",
-    "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/jwt": "^9.0.0",
-    "@nestjs/mongoose": "^9.2.2",
-    "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^9.4.2",
-    "@nestjs/serve-static": "^3.0.1",
+    "@nestjs/common": "^10.0.5",
+    "@nestjs/config": "^3.0.0",
+    "@nestjs/core": "^10.0.5",
+    "@nestjs/jwt": "^10.1.0",
+    "@nestjs/mapped-types": "*",
+    "@nestjs/mongoose": "^10.0.0",
+    "@nestjs/passport": "^10.0.0",
+    "@nestjs/platform-express": "^10.0.5",
+    "@nestjs/platform-socket.io": "^10.0.5",
+    "@nestjs/serve-static": "^4.0.0",
+    "@nestjs/swagger": "^7.1.1",
+    "@nestjs/websockets": "^10.0.5",
     "@types/multer": "^1.4.7",
     "app-root-path": "^3.1.0",
     "argon": "^2.0.21",
@@ -52,9 +56,9 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
+    "@nestjs/cli": "^10.1.7",
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.5",
     "@types/express": "^4.17.17",
     "@types/jest": "29.5.0",
     "@types/node": "18.15.11",
