--- a/tinder-frontend/package.json
+++ b/tinder-frontend/package.json
@@ -14,19 +14,25 @@
     "@types/node": "^16.18.26",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "chakra-ui-steps": "^1.6.1",
     "history": "^5.3.0",
+    "postcss": "^8.4.25",
     "react": "^18.2.0",
+    "react-chat-engine": "^1.11.28",
+    "react-chat-engine-pretty": "^0.1.8",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.43.9",
+    "react-icons": "^4.10.1",
     "react-query": "^3.39.3",
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.3",
     "socket.io-client": "^4.7.1",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.9.5",
     "use-history": "^1.4.1",
     "web-vitals": "^2.1.4",
