--- a/tinder-frontend/package.json
+++ b/tinder-frontend/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "chakra-ui-steps": "^1.6.1",
+    "framer-motion": "^10.15.0",
     "history": "^5.3.0",
     "postcss": "^8.4.25",
     "react": "^18.2.0",
